app/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-adapter
spec:
  replicas: 2
  selector:
    matchLabels:
      app: search-adapter
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: search-adapter
    spec:
      - name: app
        image: gcr.io/retail-364515/infra-dashboard-api
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
